--- a/index.html
+++ b/index.html
@@ -4,27 +4,51 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Z Snacks - The Snack Kings</title>
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Permanent+Marker&display=swap" rel="stylesheet">
         <style>
+            :root {
+                --primary-color: #e06158;
+                --secondary-red: #ff4d4d;
+                --secondary-yellow: #ffd700;
+                --background-color: #fff8f8;
+                --text-color: #333333;
+                --card-bg: #ffffff;
+            }
+
             body {
-                font-family: 'Roboto', sans-serif;
-                background-color: #ffe4b5;
+                font-family: 'Poppins', sans-serif;
+                background-color: var(--background-color);
                 margin: 0;
                 padding: 0;
+                color: var(--text-color);
+                line-height: 1.6;
             }
 
             header {
-                background-color: #e06158;
-                color: #000000;
-                text-align: center;
-                padding: 20px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                background: linear-gradient(135deg, var(--primary-color), var(--secondary-red));
+                padding: 1.5rem 0;
+                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+                position: sticky;
+                top: 0;
+                z-index: 1000;
             }
 
             .logo img {
-                max-width: 400px;
-                border-radius: 50px;
+                max-width: 300px;
+                transition: transform 0.3s ease;
+                display: block;
+                margin: 0 auto;
+            }
+
+            .logo img:hover {
+                transform: scale(1.02);
+            }
+
+            nav {
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 1rem 0;
+            margin-top: 1rem;
+            backdrop-filter: blur(5px)
             }
 
             nav ul {
@@ -32,151 +56,259 @@
                 padding: 0;
                 display: flex;
                 justify-content: center;
-                gap: 30px;
+                gap: 3rem;
+                margin: 0;
             }
 
             nav ul li a {
-                color: #000000;
+                color: #ffffff;
                 text-decoration: none;
-                font-size: 18px;
-                font-weight: bold;
-                transition: color 0.3s;
+                font-size: 1.1rem;
+                font-weight: 600;
+                transition: all 0.3s ease;
+                padding: 0.5rem 1rem;
+                border-radius: 25px;
             }
 
             nav ul li a:hover {
-                color: #ffcc00;
-                text-shadow: 0 0 8px #ffcc00, 0 0 15px #ffcc00, 0 0 20px #ffcc00;
+                background-color: var(--secondary-yellow);
+                color: var(--text-color);
+                text-shadow: none;
             }
 
             main {
-                padding: 20px;
-                max-width: 1200px;
-                margin: auto;
-                background-color: #ffffff;
-                border-radius: 10px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-                text-align: center;
+                max-width: 1400px;
+                margin: 2rem auto;
+                padding: 0 2rem;
+            }
+
+            section {
+                margin-bottom: 4rem;
+                padding: 2rem;
+                background-color: var(--card-bg);
+                border-radius: 20px;
+                box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+                border-left: 4px solid var(--secondary-red);
             }
 
             h2 {
-            color: #ffcc00;
-            text-align: center;
-            margin-bottom: 20px;
-            font-family: 'Permanent Marker', cursive;
-            text-shadow: 
-                -2px -2px 0 black, 
-                2px -2px 0 black, 
-                -2px 2px 0 black, 
-                2px 2px 0 black, 
-                0px 2px 0 black, 
-                2px 0px 0 black, 
-                -2px 0px 0 black, 
-                0px -2px 0 black;
+                color: var(--secondary-red);
+                font-size: 2.5rem;
+                text-align: center;
+                margin-bottom: 2rem;
+                font-family: 'Poppins', sans-serif;
+                font-weight: 700;
+                position: relative;
+                padding-bottom: 1rem;
+            }
+
+            h2::after {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 100px;
+                height: 4px;
+                background: linear-gradient(90deg, var(--secondary-red), var(--secondary-yellow));
+                border-radius: 2px;
             }
 
             .product-list {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-                gap: 20px; 
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+                gap: 2rem;
+                padding: 1rem;
             }
 
             .product {
-            background-color: #fffae6;
-            border: 2px solid #000000;
-            border-radius: 10px;
-            text-align: center;
-            padding: 20px;
-            width: 250px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: filter 0.5s ease-in-out;       
-        }
-            
-         .product.blur-on-click {
-            filter: blur(4px);
-            opacity: 0.7; 
-        }
+                background: white;
+                border-radius: 15px;
+                padding: 1.5rem;
+                transition: transform 0.3s ease, box-shadow 0.3s ease;
+                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                border: 2px solid transparent;
+            }
 
-        .product:hover {
-            transform: scale(1.05);
-        }
+            .product:hover {
+                transform: translateY(-5px);
+                box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+                border-color: var(--secondary-yellow);
+            }
 
-        .product img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
+            .product img {
+                width: 100%;
+                height: 200px;
+                object-fit: cover;
+                border-radius: 10px;
+                margin-bottom: 1rem;
+            }
+
+            .product h3 {
+                color: var(--secondary-red);
+                margin: 1rem 0;
+                font-size: 1.3rem;
+            }
+
+            .product p {
+                color: var(--text-color);
+                font-weight: 600;
+                margin: 0.5rem 0;
+                background-color: var(--secondary-yellow);
+                padding: 0.5rem 1rem;
+                border-radius: 20px;
+            }
 
             .shops-list {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-                gap: 20px;
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                gap: 2rem;
+                padding: 1rem;
             }
 
             .shops {
-            background-color: #fffae6;
-            border: 2px solid #000000;
-            border-radius: 10px;
-            text-align: center;
-            padding: 20px;
-            width: 250px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s;
-        }
-
-        .shops:hover {
-            transform: scale(1.05);
-        }
-
-        .shops img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-
-            footer {
-                background-color: #000000;
-                color: #ffffff;
+                background: white;
+                border-radius: 15px;
+                padding: 1.5rem;
                 text-align: center;
-                padding: 10px 0;
-                font-size: 14px;
+                transition: transform 0.3s ease;
+                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+                border: 2px solid transparent;
             }
 
-            footer p {
-                margin: 0;
+            .shops:hover {
+                transform: translateY(-5px);
+                border-color: var(--secondary-red);
             }
-            .yellow-border {
-            color: yellow;
-            text-shadow: 
-                -2px -2px 0 black, 
-                2px -2px 0 black, 
-                -2px 2px 0 black, 
-                2px 2px 0 black, 
-                0px 2px 0 black, 
-                2px 0px 0 black, 
-                -2px 0px 0 black, 
-                0px -2px 0 black;
+
+            .shops img {
+                max-width: 100%;
+                height: auto;
+                border-radius: 10px;
+                margin-bottom: 1rem;
+            }
+
+            .shops h3 {
+                color: var(--secondary-red);
+            }
+
+            #certification {
+                text-align: center;
+            }
+
+            .sanha-logo img {
+                max-width: 200px;
+                margin: 2rem auto;
+                border: 3px solid var(--secondary-yellow);
+                padding: 1rem;
+                border-radius: 10px;
+            }
+
+            #contact {
+            text-align: center;
+            background: var(--card-bg);
+            color: var(--text-color);
+            border-left: 4px solid var(--secondary-red);
+            border-radius: 20px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+            padding: 2rem;
+        }
+
+        #contact h2 {
+            color: var(--secondary-red);
+            margin-bottom: 2rem;
+        }
+
+        #contact p {
+            margin: 1rem 0;
+            font-size: 1.1rem;
+        }
+
+        #contact a {
+            color: var(--text-color);
+            text-decoration: none;
+            transition: color 0.3s ease;
+            font-weight: 600;
+        }
+
+        .whatsapp-container {
+            margin: 2rem 0;
+        }
+
+        .whatsapp-button {
+            display: inline-flex;
+            align-items: center;
+            background: linear-gradient(135deg, #25D366, #128C7E);
+            color: white;
+            padding: 1rem 2rem;
+            border-radius: 30px;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(37, 211, 102, 0.2);
+        }
+
+        .whatsapp-button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 20px rgba(37, 211, 102, 0.3);
+        }
+
+        .whatsapp-button img {
+            width: 24px;
+            margin-right: 10px;
         }
 
             #myBtn {
-              display: none; /* Hidden by default */
-              position: fixed; /* Fixed position relative to the viewport */
-              bottom: 20px; /* Distance from the bottom */
-              left: 20px; /* Distance from the left */
-              z-index: 99; /* Ensure it's on top of other content */
-              border: none; /* Remove default button border */
-              outline: none; /* Remove outline on focus */
-              background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-              color: white; /* Text color */
-              cursor: pointer; /* Change cursor on hover */
-              padding: 15px; /* Padding around the text */
-              border-radius: 10px; /* Rounded corners */
-              font-size: 18px; /* Font size */
-        }
+                display: none;
+                position: fixed;
+                bottom: 30px;
+                left: 30px;
+                z-index: 99;
+                border: none;
+                outline: none;
+                background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
+                color: white;
+                cursor: pointer;
+                padding: 15px;
+                border-radius: 50%;
+                font-size: 18px;
+                transition: all 0.3s ease;
+                width: 50px;
+                height: 50px;
+                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+                border: 2px solid var(--secondary-yellow);
+            }
 
             #myBtn:hover {
-              background-color: rgba(0, 0, 0, 0.7); /* Darker background on hover */
+                background: var(--secondary-yellow);
+                transform: translateY(-3px);
+            }
+
+            footer {
+                background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
+                color: white;
+                text-align: center;
+                padding: 2rem 0;
+                margin-top: 4rem;
+                border-top: 4px solid var(--secondary-yellow);
+            }
+
+            @media (max-width: 768px) {
+                .logo img {
+                    max-width: 250px;
+                }
+
+                nav ul {
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 1rem;
+                }
+
+                .product-list, .shops-list {
+                    grid-template-columns: 1fr;
+                }
             }
         </style>
     </head>
@@ -287,19 +419,14 @@
             </section>
             <section id="contact">
                 <h2>Contact Us</h2>
-                <p>
-                    <h3>Email: <a href="mailto:Sallim7866@gmail.com">Sallim7866@gmail.com</a>
-                </p>
-                <p>Phone: <a href="tel:0763454692">076 345 4692</a>
-                </p>
-                <p>
-                    <div style="display: flex; justify-content: center; align-items: center; height: auto; margin: 0;">
-                        <a href="https://wa.me/+27763454692" target="_blank" style="text-decoration: none; display: flex; align-items: center;">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Contact" style="width: 60px; height: auto; margin-right: 10px;">
-                            <span style="font-size: 16px; color: #000000; font-weight: bold;">Come chat to us on WhatsApp</span>
-                        </a>
-                    </div>                   
-                </p>
+                <p>Email: <a href="mailto:Sallim7866@gmail.com">Sallim7866@gmail.com</a></p>
+                <p>Phone: <a href="tel:0763454692">076 345 4692</a></p>
+                <div class="whatsapp-container">
+                    <a href="https://wa.me/+27763454692" class="whatsapp-button" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+                        Chat with us on WhatsApp
+                    </a>
+                </div>
             </section>
             </main>
             
