--- a/minipizza.html
+++ b/minipizza.html
@@ -1,148 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Pizzas - Z Snacks</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #ffe4b5;
-            margin: 0;
-            padding: 0;
-        }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Z Snacks - Samoosas</title>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Permanent+Marker&display=swap" rel="stylesheet">
+        <style>
+            :root {
+                --primary-color: #e06158;
+                --secondary-red: #ff4d4d;
+                --secondary-yellow: #ffd700;
+                --background-color: #fff8f8;
+                --text-color: #333333;
+                --card-bg: #ffffff;
+            }
 
-        header {
-            background-color: #e06158;
-            color: #000000;
-            text-align: center;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
+            body {
+                font-family: 'Poppins', sans-serif;
+                background-color: var(--background-color);
+                margin: 0;
+                padding: 0;
+                color: var(--text-color);
+                line-height: 1.6;
+            }
 
-        .logo img {
-            max-width: 400px;
-            display: block;
-            margin: 0 auto;
-            border-radius: 50px;
-        }
+            header {
+                background: linear-gradient(135deg, var(--primary-color), var(--secondary-red));
+                padding: 1.5rem 0;
+                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+                position: sticky;
+                top: 0;
+                z-index: 1000;
+            }
 
-        nav ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-        }
+            .logo img {
+                max-width: 300px;
+                transition: transform 0.3s ease;
+                display: block;
+                margin: 0 auto;
+            }
 
-        nav ul li a {
-            color: #000000;
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: bold;
-            transition: color 0.3s;
-            border: 2px solid transparent;
-            padding: 5px 10px;
-        }
+            .logo img:hover {
+                transform: scale(1.02);
+            }
 
-        nav ul li a:hover {
-            color: #ffcc00;
-            text-shadow: 0 0 8px #ffcc00, 0 0 15px #ffcc00, 0 0 20px #ffcc00;
-        }
+            nav {
+                background-color: rgba(255, 255, 255, 0.1);
+                padding: 1rem 0;
+                margin-top: 1rem;
+                backdrop-filter: blur(5px);
+            }
 
-        .nav-button {
-            color: red; 
-            text-decoration: none;
-            font-size: 20px; 
-            padding: 10px 20px; 
-            font-family: 'Permanent Marker', cursive;
-            transition: background-color 0.3s, color 0.3s; 
-            border-radius: 5px; 
-            background-color: transparent; 
-            text-shadow:
-                -2px -2px 0 black,
-                2px -2px 0 black,
-                -2px 2px 0 black,
-                2px 2px 0 black,
-                0px 2px 0 black,
-                2px 0px 0 black,
-                -2px 0px 0 black,
-                0px -2px 0 black;
-        }
+            nav ul {
+                list-style: none;
+                padding: 0;
+                display: flex;
+                justify-content: center;
+                gap: 3rem;
+                margin: 0;
+            }
 
-        main {
-            padding: 20px;
-            max-width: 1200px;
-            margin: auto;
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            text-align: center;
-        }
+            nav ul li a {
+                color: #ffffff;
+                text-decoration: none;
+                font-size: 1.1rem;
+                font-weight: 600;
+                transition: all 0.3s ease;
+                padding: 0.5rem 1rem;
+                border-radius: 25px;
+            }
 
-        h2 {
-            color: #ffcc00;
-            text-align: center;
-            margin-bottom: 20px;
-            font-family: 'Permanent Marker', cursive;
-            text-shadow:
-                -2px -2px 0 black,
-                2px -2px 0 black,
-                -2px 2px 0 black,
-                2px 2px 0 black,
-                0px 2px 0 black,
-                2px 0px 0 black,
-                -2px 0px 0 black,
-                0px -2px 0 black;
-        }
+            nav ul li a:hover {
+                background-color: var(--secondary-yellow);
+                color: var(--text-color);
+                text-shadow: none;
+                text-decoration: none;
+            }
 
-        .header-container {
-              display: flex; 
-              justify-content: space-between; 
-              align-items: center; 
-              margin-bottom:20px;
-        }
+            main {
+                max-width: 1400px;
+                margin: 2rem auto;
+                padding: 0 2rem;
+            }
 
-        table {
-            width: 90%;
-            max-width: 90%;
-            border-collapse: collapse;
-            margin: auto; 
-        }
+            section {
+                margin-bottom: 4rem;
+                padding: 2rem;
+                background-color: var(--card-bg);
+                border-radius: 20px;
+                box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+                border-left: 4px solid var(--secondary-red);
+            }
 
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
+            h2 {
+                color: var(--secondary-red);
+                font-size: 2.5rem;
+                text-align: center;
+                margin-bottom: 2rem;
+                font-family: 'Poppins', sans-serif;
+                font-weight: 700;
+                position: relative;
+                padding-bottom: 1rem;
+            }
 
-        th {
-            background-color: #ffd700;
-            color: #000;
-        }
+            h2::after {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 100px;
+                height: 4px;
+                background: linear-gradient(90deg, var(--secondary-red), var(--secondary-yellow));
+                border-radius: 2px;
+            }
 
-        footer {
-            background-color: #000000;
-            color: #ffffff;
-            text-align: center;
-            padding: 10px 0;
-            font-size: 14px;
-        }
+            .header-container {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin: 0 -2rem 2rem -2rem;
+                padding: 0 4rem;
+            }
 
-        footer p {
-            margin: 0;
-        }
+            .nav-button {
+                color: white;
+                text-decoration: none;
+                font-size: 1.1rem;
+                padding: 0.8rem 1.5rem;
+                border-radius: 50px;
+                background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
+                transition: all 0.3s ease;
+                display: inline-flex;
+                align-items: center;
+                gap: 0.5rem;
+                border: 2px solid transparent;
+            }
 
-        #flavors img {
-          display: block; 
-          margin:auto; 
-          max-width:50%; 
-          height:auto; 
-          border-radius :10px; 
-      }
-    </style>
-</head>
+            .nav-button:hover {
+                background: var(--secondary-yellow);
+                color: var(--text-color);
+                border: 2px solid var(--secondary-red);
+                text-decoration: none;
+                transform: translateY(-2px);
+                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            }
+
+            a {
+                text-decoration: none;
+            }
+
+            a:hover {
+                text-decoration: none;
+            }
+
+            img {
+                max-width: 100%;
+                height: auto;
+                border-radius: 20px;
+                margin: 2rem 0;
+                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            }
+
+            table {
+                width: 100%;
+                border-collapse: collapse;
+                margin: 2rem 0;
+                background: white;
+                border-radius: 10px;
+                overflow: hidden;
+                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+            }
+
+            th, td {
+                padding: 1rem;
+                text-align: left;
+                border-bottom: 1px solid #eee;
+            }
+
+            th {
+                background: var(--secondary-yellow);
+                color: var(--text-color);
+                font-weight: 600;
+            }
+
+            tr:hover {
+                background-color: #f8f8f8;
+            }
+
+            footer {
+                background: linear-gradient(135deg, var(--secondary-red), var(--primary-color));
+                color: white;
+                text-align: center;
+                padding: 2rem 0;
+                margin-top: 4rem;
+                border-top: 4px solid var(--secondary-yellow);
+            }
+
+            @media (max-width: 768px) {
+                .logo img {
+                    max-width: 250px;
+                }
+
+                nav ul {
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 1rem;
+                }
+
+                table {
+                    font-size: 0.9rem;
+                }
+
+                .header-container {
+                    padding: 0 2rem;
+                }
+            }
+        </style>
+    </head>
 <body>
     <header>
         <div class="logo">
@@ -159,9 +234,9 @@
 
     <main>
         <section id="mini-pizzas"><div class="header-container">
-            <a class="nav-button" href="pizzabases.html">&lt; Prev</a>
-            <h2>Mini Pizzas</h2>
-            <a class="nav-button"></a>
+            <a class="nav-button" href="pizzabases.html">← Back</a>
+            <h2>Mini Pizza Flavors</h2>
+            <a class="nav-button" href="index.html">Next →</a>
         </div>
     
             <img src="images/minipizza.jpg" alt="Mini Pizzas">
@@ -194,3 +269,4 @@
     </footer>
 </body>
 </html>
+
